Log in with sessions but there is an error

--- a/db.yaml
+++ b/db.yaml
@@ -1,4 +1,4 @@
 mysql_host: 'localhost'
-mysql_user: 'root'
-mysql_password: 'Test_123'
+mysql_user: 'dani'
+mysql_password: 'Levski_1914'
 mysql_db: 'SportsEventer'
